[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Aditya Bhattar <50770594+adibhattar95@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
hopsworks = "^3.0.5"
python-dotenv = "^1.0.0"
plotly = "^5.14.1"
scikit-learn = "^1.2.2"
xgboost = "^1.7.5"
lightgbm = "^3.3.5"
optuna = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
